--- a/app/src/main/res/layout/va_fragment_video_audio_study.xml
+++ b/app/src/main/res/layout/va_fragment_video_audio_study.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.design.widget.TabLayout
+        android:paddingTop="@dimen/public_space_small"
+        android:id="@+id/va_tl_tag_bar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:tabIndicatorColor="@color/golden"
+        app:tabSelectedTextColor="@color/golden"
+        app:tabTextColor="@color/public_text_hint" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/va_vp_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
