--- a/app/src/main/res/values/styles_public.xml
+++ b/app/src/main/res/values/styles_public.xml
@@ -45,26 +45,26 @@
         <!--<item name="android:maxLines">1</item>-->
     <!--</style>-->
 
-    <!--&lt;!&ndash; textView的默认样式 vertical状态下&ndash;&gt;-->
-    <!--<style name="public_textView_normal">-->
-        <!--<item name="android:layout_width">match_parent</item>-->
-        <!--<item name="android:layout_height">@dimen/public_item_height</item>-->
-        <!--<item name="android:gravity">center_vertical</item>-->
-        <!--<item name="android:textColor">@color/public_text</item>-->
-        <!--<item name="android:textSize">@dimen/public_font_size_normal</item>-->
-        <!--<item name="android:paddingLeft">@dimen/public_space_normal</item>-->
-        <!--<item name="android:paddingRight">@dimen/public_space_normal</item>-->
-        <!--<item name="android:background">@drawable/publico_selector_item_press_bg</item>-->
-    <!--</style>-->
+    <!-- textView的默认样式 vertical状态下-->
+    <style name="public_textView_normal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/public_item_height</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/public_text</item>
+        <item name="android:textSize">@dimen/public_font_size_normal</item>
+        <item name="android:paddingLeft">@dimen/public_space_normal</item>
+        <item name="android:paddingRight">@dimen/public_space_normal</item>
+        <item name="android:background">@drawable/publico_selector_item_press_bg</item>
+    </style>
 
-    <!--&lt;!&ndash; textView样式 horizontal状态下&ndash;&gt;-->
-    <!--<style name="public_textView_normal_h">-->
-        <!--<item name="android:layout_width">wrap_content</item>-->
-        <!--<item name="android:layout_height">@dimen/public_item_height</item>-->
-        <!--<item name="android:gravity">center_vertical</item>-->
-        <!--<item name="android:textColor">@color/public_text</item>-->
-        <!--<item name="android:textSize">@dimen/public_font_size_normal</item>-->
-    <!--</style>-->
+    <!-- textView样式 horizontal状态下-->
+    <style name="public_textView_normal_h">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/public_item_height</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/public_text</item>
+        <item name="android:textSize">@dimen/public_font_size_normal</item>
+    </style>
 
     <!--&lt;!&ndash; Button的默认样式 &ndash;&gt;-->
     <!--<style name="public_button_normal">-->
