--- a/app/src/main/res/layout/va_activity_junior_draw_picture.xml
+++ b/app/src/main/res/layout/va_activity_junior_draw_picture.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <!--<Button style=""-->
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/va_vp_pager"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <Button
+            android:id="@+id/va_bt_show_1"
+            style="@style/public_button_normal"
+            android:text="1.使用ImageView显示图片" />
+
+        <ImageView
+            android:layout_margin="@dimen/public_space_small"
+            android:layout_gravity="center"
+            android:id="@+id/va_iv_show_1"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
+
+    </LinearLayout>
+</ScrollView>
