--- a/app/src/main/res/layout/va_activity_junior_draw_picture.xml
+++ b/app/src/main/res/layout/va_activity_junior_draw_picture.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,6 +20,18 @@
             android:id="@+id/va_iv_show_1"
             android:layout_width="80dp"
             android:layout_height="80dp" />
+
+        <Button
+            android:id="@+id/va_bt_show_3"
+            style="@style/public_button_normal"
+            android:text="3.使用SurfaceView显示图片" />
+
+        <SurfaceView
+            android:id="@+id/va_sv_show"
+            android:layout_margin="@dimen/public_space_small"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="250dp"
+            android:layout_height="200dp" />
 
     </LinearLayout>
 </ScrollView>
